--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/DataView"]
 	path = lib/DataView
 	url = https://github.com/davidflanagan/DataView.js.git
+[submodule "lib/io"]
+	path = lib/io
+	url = https://github.com/sergeyt/io.js.git
